--- a/style.css
+++ b/style.css
@@ -64,7 +64,16 @@ body {
 .quote {
     text-wrap: pretty;
     font-size: 1.2rem;
-    padding: .5em max(2rem, 8%) 3rem max(2rem, 8%);
+    padding: 0.5em max(2rem, 8%) 2.4rem max(2rem, 8%);
+}
+
+.attribution {
+    width: 100%;
+    text-align: right;
+    font-size: 0.6rem;
+    font-style: italic;
+    padding: 0 1rem 8px;
+    color: lightgray;
 }
 
 #form-section {
