--- a/style.css
+++ b/style.css
@@ -4,22 +4,66 @@
 }
 
 :root {
-    --text-color: #404040;
     --primary-color: #0f756d;
     --primary-color-light: #32a39a; 
     --accent-color: #e99e25;
     --error-color: #ff726a;
 }
 
+:root.light {
+    --text-color: #404040;
+    --accent-color: #e99e25;
+    --error-color: #ff726a;
+    --background-color: #F9FAFB;
+    --background-image: url("./img/odin-light.png");
+    --button-image: url("./img/moon-svgrepo-com.png");
+
+    --input-background-color: #F9FAFB;
+    --input-border-color: lightgray;
+
+    --logo-filter: brightness(0) drop-shadow(0 0 5px rgba(233, 158, 37, 1));
+}
+
+:root.dark {
+    --text-color: #F9FAFB;
+    --accent-color: #e99e25;
+    --error-color: #ff726a;
+    --background-color: #111827;
+    --background-image: url("./img/odin-dark.png");
+    --button-image: url("./img/sun-2-svgrepo-com.png");
+
+    --input-background-color: #1D2432;
+    --input-border-color: gray;
+    
+    --logo-filter: drop-shadow(0 0 5px rgba(233, 158, 37, 1));
+}
+
+
 * {
     font-family: "Inter", Helvetica, sans-serif;
 }
 
 body {
-    background-color: #F9FAFB;
+    position: relative;
+    background-color: var(--background-color);
     display: flex;
     height: 100vh;
     padding: 0.5rem;
+}
+
+#theme-button {
+    width: 50px;
+    aspect-ratio: 1;
+    border: none;
+    background: none;
+    background-image: var(--button-image);
+    background-size: cover;
+    position: absolute;
+    width: 2rem;
+    top: 1.5rem;
+    right: 1.5rem;
+    cursor: pointer;
+    z-index: 2;
 }
 
 @media only screen and (max-width: 800px) {
@@ -39,13 +83,14 @@ body {
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    background-image: linear-gradient(180deg, rgba(255,255,255,0) 50%, rgba(0,0,0,.7) 85%), url("./img/odin-light.png");
+    background-image: linear-gradient(180deg, rgba(255,255,255,0) 50%, rgba(0,0,0,.7) 85%), var(--background-image);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
     border-radius: 0 25px 0 25px;
     filter: brightness(95%) contrast(105%) saturate(150%);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
 .logo-hero {
@@ -53,9 +98,6 @@ body {
     top: 1.5rem;
     left: 1.5rem;
     width: 75px;
-}
-
-.logo-white {
     filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
 }
 
@@ -89,14 +131,12 @@ body {
 @media only screen and (max-width: 800px) {
     #hero {
         flex: none;
-        height: 90vh;
+        height: 85vh;
         border-radius: 0 0 0 25px;
     }
 
     .logo-hero {
-        width: 100px;
-        position: static;
-        padding-bottom: 1.5rem;
+        display: none;
     }
 
     .headline {
@@ -134,8 +174,8 @@ header {
     gap: 0.5rem;
 }
 
-.logo-black {
-    filter: brightness(0);
+#logo-form {
+    filter: var(--logo-filter);
     width: 30px;
 }
 
@@ -151,8 +191,7 @@ header {
     }
 
     header {
-        width: 80vw;
-        height: calc(10vh - 2rem);
+        height: calc(15vh - 2rem);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -161,6 +200,12 @@ header {
     .logo-name {
         font-size: 2rem;
     }
+
+    #logo-form {
+        width: 50px;
+    }
+
+    
 }
 
 /* main section within form section */
@@ -214,10 +259,11 @@ input {
     height: 2.5rem;
     width: 100%;
     appearance: none;
-    border: 2px solid lightgray;
+    background-color: var(--input-background-color);
+    border: 2px solid var(--input-border-color);
     border-radius: 5px;
     color: var(--text-color);
-    transition: all 0.2s ease;
+    transition: border 0.2s ease;
 }
 
 input:hover, input:focus{
